--- a/src/components/Join/Join.scss
+++ b/src/components/Join/Join.scss
@@ -1,3 +1,5 @@
+@import "../../global.scss";
+
 .logos {
   width: 80%;
   margin: auto;
@@ -10,5 +12,24 @@
     border-radius: 1rem;
     padding: 2%;
     background-color: whitesmoke;
+  }
+
+  form {
+    text-align: center;
+    margin: auto;
+    background-color: aqua;
+    .under {
+      background-color: $color2;
+      border: solid 1px black;
+      font-size: 1rem;
+      width: 20%;
+      border-radius: 1rem;
+      height: 100%;
+      cursor: pointer;
+
+      &:hover {
+        background-color: $color3;
+      }
+    }
   }
 }
