minor change in design

--- a/src/components/Join/Join.scss
+++ b/src/components/Join/Join.scss
@@ -9,7 +9,7 @@
     width: 4vw;
     height: 4vw;
     cursor: pointer;
-    border-radius: 1rem;
+    border-radius: 50%;
     padding: 2%;
     background-color: whitesmoke;
   }
