--- a/src/components/Chat/Chat.scss
+++ b/src/components/Chat/Chat.scss
@@ -26,23 +26,23 @@
 
   input {
     width: 75%;
-    border: solid 1px black;
-    border-radius: 1rem;
     height: 100%;
     background-color: $color2;
+    border: none;
     padding: 0 1vw;
     font-size: 1rem;
+    border-left: solid 1px $color1;
   }
 
   button {
     background-color: $color2;
-    border: solid 1px black;
+    border: none;
     font-size: 1rem;
     float: right;
     width: 19%;
-    border-radius: 1rem;
     height: 100%;
     cursor: pointer;
+    border-right: solid 1px $color1;
 
     &:hover {
       background-color: $color3;
