--- a/src/components/Participant/Participant.scss
+++ b/src/components/Participant/Participant.scss
@@ -1,13 +1,14 @@
-.participant {
+@import "../../global.scss";
+
+.participant, .special {
   display: flex;
   align-items: center;
 
   div {
     padding: 1vh 1vw;
-    border-radius: 3rem;
     background: #e5e5ea;
     color: black;
-    font-size: small;
+    font-size: 0.75rem;
   }
   
   img {
@@ -18,3 +19,11 @@
   }
 }
 
+.none {
+  display: none;
+}
+
+.special {
+  background-color: $color1;
+  border-radius: 0.5rem;
+}
