--- a/src/components/Password/Password.scss
+++ b/src/components/Password/Password.scss
@@ -1,28 +1,19 @@
 @import "../../global.scss";
 
-.participants {
+.password {
     background-color: $color2;
     height: 74vh;
     width: 60%;
     position: absolute;
     top: 0;
-    left: 100%;
+    right: 100%;
     
     .heading {
-        border-left: solid 1px $color2;
+        border-right: solid 1px $color2;
         font-size: 2vw;
         text-transform: uppercase;
         background-color: $color1;
         color: whitesmoke;
         padding: 2vh 0;
-    }
-
-    .participants-list {
-        width: 80%;
-        margin: auto;
-        height: 65vh;
-        overflow: scroll;
-        flex-direction: column;
-        transform: translateY(5%);
     }
 }
