--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -1,31 +1,54 @@
-.outgoing,
-.incoming {
-  display: flex;
-  align-items: center;
+@import "../../global.scss";
 
-  div {
-    padding: 1vh 1vw;
-    border-radius: 3rem;
+.message {
+  .outgoing,
+  .incoming {
+    display: flex;
+    align-items: center;
+
+    div {
+      padding: 1vh 1vw;
+      border-radius: 3rem;
+    }
   }
-}
 
-.outgoing {
-  flex-direction: row-reverse;
+  .outgoing {
+    flex-direction: row-reverse;
 
-  div {
-    color: white;
-    background: #1e85da;
+    div {
+      color: whitesmoke;
+      background: #1e85da;
+    }
+
+    .modify-container {
+      background-color: $color2;
+      border-radius: 0%;
+      margin-right: 1vw;
+
+      .delete,
+      .edit {
+        width: 1vw;
+        height: 1vw;
+        margin: 0 0.5vw;
+        cursor: pointer;
+      }
+    }
   }
-}
 
-.incoming div {
-  background: #e5e5ea;
-  color: black;
-}
+  .incoming {
+    div {
+      background: $color2;
+      color: black;
+    }
+    .modify-container {
+      display: none;
+    }
+  }
 
-img {
-  width: 2vw;
-  height: 4vh;
-  border-radius: 50%;
-  margin: 0.4vh 1vw;
+  .photo {
+    width: 2vw;
+    height: 4vh;
+    border-radius: 50%;
+    margin: 0.4vh 1vw;
+  }
 }
