add password functionality, fix join and password components to sync password accurately

--- a/src/components/Password/Password.scss
+++ b/src/components/Password/Password.scss
@@ -7,7 +7,7 @@
     position: absolute;
     top: 0;
     right: 100%;
-    
+
     .heading {
         border-right: solid 1px $color2;
         font-size: 2vw;
@@ -15,5 +15,33 @@
         background-color: $color1;
         color: whitesmoke;
         padding: 2vh 0;
+    }
+
+    .v-center {
+        margin-top: 50%;
+        input {
+            width: 75%;
+            height: 1vh;
+            font-size: 1vw;
+            padding: 4%;
+            border: solid 1px $color2;
+            background-color: whitesmoke;
+        }
+
+        .show {
+            width: 90%;
+            margin: auto;
+            height: 40px;
+        }
+
+        .button {
+            text-transform: uppercase;
+            background-color: $color3;
+            width: 80%;
+            padding: 5% 2.5%;
+            border-radius: 2.5rem;
+            margin: auto;
+            cursor: pointer;
+        }
     }
 }
