--- a/src/components/Participant/Participant.scss
+++ b/src/components/Participant/Participant.scss
@@ -1,6 +1,7 @@
 @import "../../global.scss";
 
-.participant, .special {
+.participant,
+.special {
   display: flex;
   align-items: center;
 
@@ -10,7 +11,7 @@
     color: black;
     font-size: 0.75rem;
   }
-  
+
   img {
     width: 2vw;
     height: 4vh;
@@ -26,4 +27,8 @@
 .special {
   background-color: $color1;
   border-radius: 0.5rem;
+
+  &:hover {
+    background-color: $color4;
+  }
 }
