--- a/src/components/Chat/Chat.scss
+++ b/src/components/Chat/Chat.scss
@@ -1,6 +1,8 @@
 @import "../../global.scss";
 
 .chat {
+  padding-top: 5vh;
+
   .text {
     height: 6vh;
 
@@ -12,7 +14,7 @@
     }
 
     .setup {
-      transform: rotate(180deg)
+      transform: rotate(180deg);
     }
   }
 
