--- a/src/global.scss
+++ b/src/global.scss
@@ -10,17 +10,34 @@ $color4: #325677;
   height: 80vh;
   text-align: center;
   transform: translateY(12vh);
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+    "Helvetica Neue", sans-serif;
 
   .text {
     background-color: $color2;
     color: black;
     width: 100%;
     font-size: 2.5vw;
+    position: absolute;
     padding: 2% 0;
-    margin: auto;
+    top: 0;
     transform: translateY(-100%);
     text-transform: uppercase;
+  }
+
+  .client-message {
+    width: 100%;
+    padding: 1.5vh 0;
+    background-color: $color3;
+
+    img {
+      width: 1.25vw;
+      margin-right: 0.75vw;
+    }
+
+    .close-message {
+      float: right;
+      cursor: pointer;
+    }
   }
 }
